[gd_scene load_steps=4 format=2]

[ext_resource path="res://Weapon/Weapon.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.15, 0.4 ), Vector2( 0.055, 0.45 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 78, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 85, 0 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
position = Vector2( 41, 0 )
scale = Vector2( 1, 0.1 )
texture = ExtResource( 2 )

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.360784, 0.360784, 1 )
position = Vector2( 77, 0 )
scale = Vector2( 0.055, 0.45 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/muzzle_flash = SubResource( 1 )

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.129
one_shot = true
